mvp案例职责学习

--- a/Read/ReadMeWiki/00.方案实践/05.Crash治理优化总结.md
+++ b/Read/ReadMeWiki/00.方案实践/05.Crash治理优化总结.md
@@ -18,7 +18,8 @@
 - 05.三方库导致Crash
     - 5.1 反射修改代码
 - 06.AOP增强辅助
-    - 6.1 
+    - 6.1 AOP是什么
+    - 6.2 处理Intent异常
 - 07.Crash的预防实践
     - 7.1 工程架构对Crash率的影响
     - 7.2 大图监控
@@ -247,11 +248,16 @@
 
 
 ### 06.AOP增强辅助
-- AOP是面向切面编程的简称，在Android的Gradle插件1.5.0中新增了Transform API之后，编译时修改字节码来实现AOP也因为有了官方支持而变得非常方便。
+#### 6.1 AOP是什么
+- AOP是面向切面编程的简称
+    - 在Android的Gradle插件1.5.0中新增了Transform API之后，编译时修改字节码来实现AOP也因为有了官方支持而变得非常方便。
 - 在一些特定情况下，可以通过AOP的方式自动处理未捕获的异常：
     - 抛异常的方法非常明确，调用方式比较固定。
     - 异常处理方式比较统一。
     - 和业务逻辑无关，即自动处理异常后不会影响正常的业务逻辑。典型的例子有读取Intent Extras参数、读取SharedPreferences、解析颜色字符串值和显示隐藏Window等等。
+
+
+#### 6.2 处理Intent异常
 - 这类问题的解决原理大致相同
     - 我们以Intent Extras为例详细介绍一下。读取Intent Extras的问题在于我们非常常用的方法 Intent#getStringExtra 在代码逻辑出错或者恶意攻击的情况下可能会抛出ClassNotFoundException异常，而我们平时在写代码时又不太可能给所有调用都加上try-catch语句，于是一个更安全的Intent工具类应运而生，理论上只要所有人都使用这个工具类来访问Intent Extras参数就可以防止此类型的Crash。
     - 但是面对庞大的旧代码仓库和诸多的业务部门，修改现有代码需要极大成本，还有更多的外部依赖SDK基本不可能使用我们自己的工具类，此时就需要AOP大展身手了。
@@ -266,7 +272,8 @@
         }
     }
     ```
-- 上面的配置就可以将App代码（包括第三方库）里所有的Intent.getXXXExtra调用替换成IntentUtil类中的安全版实现。当然，并不是所有的异常都只需要catch住就万事大吉，如果真的有逻辑错误肯定需要在开发和测试阶段及时暴露出来，所以在IntentUtil中会对App的运行环境做判断，Debug下会将异常直接抛出，开发同学可以根据Crash堆栈分析问题，Release环境下则在捕获到异常时返回对应的默认值然后将异常上报到服务器。
+- 上面的配置就可以将App代码（包括第三方库）里所有的Intent.getXXXExtra调用替换成IntentUtil类中的安全版实现。
+    - 当然，并不是所有的异常都只需要catch住就万事大吉，如果真的有逻辑错误肯定需要在开发和测试阶段及时暴露出来，所以在IntentUtil中会对App的运行环境做判断，Debug下会将异常直接抛出，开发同学可以根据Crash堆栈分析问题，Release环境下则在捕获到异常时返回对应的默认值然后将异常上报到服务器。
 
 
 
