--- a/Read/ReadShareWiki/00.综合专项/00.面试刷题复习.md
+++ b/Read/ReadShareWiki/00.综合专项/00.面试刷题复习.md
@@ -27,6 +27,7 @@
     - 4.2 图片框架
     - 4.3 解析框架
     - 4.4 内存框架
+    - 4.5 音视频播放
 - 05.高级优化知识
     - 5.1 性能相关
 - 06.算法知识
@@ -184,6 +185,15 @@
 
 #### 4.4 内存框架
 - 【内存泄漏】常见的内存泄漏有哪些？又是如何解决这些内存泄漏的？并且针对常见的内存泄漏造成的原因是什么？
+
+
+#### 4.5 音视频播放
+- 视频播放器拉流过程中，在网络不佳情况下，如何保证视频播放流畅，有哪些手段
+- MediaCodec发生异常有哪些，说一下你做视频过程中这个异常场景，怎么解决的
+- h264解码视频像素的过程中，软解码有哪些优化手段
+- 你之前视频播放器封装思路是什么样，不断追问，直接你答不出来为止
+- 如果让你实现一个边播边缓存的工具库，有预加载缓存视频功能，你该如何设计
+
 
 
 
