--- a/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
+++ b/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
@@ -238,6 +238,19 @@ APUS               下午2点-3点，二面过，说还有技术面
 知乎               下午4点-5点
 
 
+3月28日
+知乎               晚上7点
+
+3月29日
+搜狐视频            上午10:30
+集度               下午2点
+
+
+3月30日
+知乎               晚上7点
+
+
+
 过了两家：作业帮，极客邦，VipKid，开课吧，货拉拉，长城汽车，搜狐视频
 32x16=51.2
 33x14=46.2
