--- a/Read/ReadVideoWiki/00.方案实践/01.视频播放器封装思路.md
+++ b/Read/ReadVideoWiki/00.方案实践/01.视频播放器封装思路.md
@@ -1,10 +1,26 @@
-# 04.视频播放器通用架构实践
+# 01.视频播放器通用架构实践
 #### 目录介绍
 - 01.视频播放器的痛点
+    - 1.1 播放器内核难以切换
+    - 1.2 播放器内核和UI层耦合
+    - 1.3 UI难以自定义或者修改麻烦
+    - 1.4 播放器播放和业务耦合
 - 02.业务需求的目标
+    - 2.1 常见的业务需求
+    - 2.2 音视频播放框架
 - 03.该播放器框架特点
+    - 3.1 一定要解耦合
+    - 3.2 适合多种业务场景
+    - 3.3 整体架构特点
 - 04.播放器内核封装
+    - 4.0 遇到的问题
+    - 4.1 视频播放器内核封装需求
+    - 4.2 播放器内核架构图
+    - 4.3 如何兼容不同内核播放器
 - 05.播放器UI层封装
+    - 5.1 实际开发遇到问题
+    - 5.2 如何分离播放和UI分离
+    - 5.3 关于优先级视图展示
 - 06.如何简单使用
 - 07.如何自定义播放器
 - 08.该案例的拓展性分享
@@ -28,13 +44,20 @@
 
 
 ### 01.视频播放器的痛点
-- 播放器内核难以切换
-    - 不同的视频播放器内核，由于api不一样，所以难以切换操作。要是想兼容内核切换，就必须自己制定一个视频接口+实现类的播放器
-- 播放器内核和UI层耦合
-    - 也就是说视频player和ui操作柔和到了一起，尤其是两者之间的交互。比如播放中需要更新UI进度条，播放异常需要显示异常UI，都比较难处理播放器状态变化更新UI操作
-- UI难以自定义或者修改麻烦
-    - 比如常见的视频播放器，会把视频各种视图写到xml中，这种方式在后期代码会很大，而且改动一个小的布局，则会影响大。这样到后期往往只敢加代码，而不敢删除代码……
-    - 有时候难以适应新的场景，比如添加一个播放广告，老师开课，或者视频引导业务需求，则需要到播放器中写一堆业务代码。迭代到后期，违背了开闭原则，视频播放器需要做到和业务分离
+#### 1.1 播放器内核难以切换
+- 不同的视频播放器内核，由于api不一样，所以难以切换操作。要是想兼容内核切换，就必须自己制定一个视频接口+实现类的播放器
+
+
+#### 1.2 播放器内核和UI层耦合
+- 也就是说视频player和ui操作柔和到了一起，尤其是两者之间的交互。比如播放中需要更新UI进度条，播放异常需要显示异常UI，都比较难处理播放器状态变化更新UI操作
+
+
+#### 1.3 UI难以自定义或者修改麻烦
+- 比如常见的视频播放器，会把视频各种视图写到xml中，这种方式在后期代码会很大，而且改动一个小的布局，则会影响大。这样到后期往往只敢加代码，而不敢删除代码……
+- 有时候难以适应新的场景，比如添加一个播放广告，老师开课，或者视频引导业务需求，则需要到播放器中写一堆业务代码。迭代到后期，违背了开闭原则，视频播放器需要做到和业务分离
+
+
+#### 1.4 播放器播放和业务耦合
 - 视频播放器结构不清晰
     - 这个是指该视频播放器能否看了文档后快速上手，知道封装的大概流程。方便后期他人修改和维护，因此需要将视频播放器功能分离。比如切换内核+视频播放器(player+controller+view)
 - 播放器播放和业务耦合
@@ -43,23 +66,30 @@
 
 
 ### 02.业务需求的目标
-- 常见的业务需求
-    - 基础封装视频播放器player，可以在ExoPlayer、MediaPlayer，声网RTC视频播放器内核，原生MediaPlayer可以自由切换
-    - 对于视图状态切换和后期维护拓展，避免功能和业务出现耦合。比如需要支持播放器UI高度定制，而不是该lib库中UI代码
-    - 针对视频播放，音频播放，播放回放，以及视频直播的功能。使用简单，代码拓展性强，封装性好，主要是和业务彻底解耦，暴露接口监听给开发者处理业务具体逻辑
-- 音视频播放框架
-    - 视频播放等于MediaPlayer和SurfaceView，MediaPlayer主要用于播放音频，没有提供图像输出界面，所以我们需要借助其他的组件来显示MediaPlayer播放的图像输出，我们可以使用SurfaceView来显示
-    - 能否实践开发出一套音视频播放的通用架构，能支持音频播放场景，也能播放视频场景，还可以无缝切换。比如视频切换音频操作，增强库的功能性
-    - 视频窗口、音频窗口、视频浮窗、音频浮窗、短视频窗口、短视频浮窗、音频控制台等多种场景播放，需要灵活切换，这个也是一个大的难点
+#### 2.1 常见的业务需求
+- 基础封装视频播放器player，可以在ExoPlayer、MediaPlayer，声网RTC视频播放器内核，原生MediaPlayer可以自由切换
+- 对于视图状态切换和后期维护拓展，避免功能和业务出现耦合。比如需要支持播放器UI高度定制，而不是该lib库中UI代码
+- 针对视频播放，音频播放，播放回放，以及视频直播的功能。使用简单，代码拓展性强，封装性好，主要是和业务彻底解耦，暴露接口监听给开发者处理业务具体逻辑
+
+
+#### 2.2 音视频播放框架
+- 视频播放等于MediaPlayer和SurfaceView，MediaPlayer主要用于播放音频，没有提供图像输出界面，所以我们需要借助其他的组件来显示MediaPlayer播放的图像输出，我们可以使用SurfaceView来显示
+- 能否实践开发出一套音视频播放的通用架构，能支持音频播放场景，也能播放视频场景，还可以无缝切换。比如视频切换音频操作，增强库的功能性
+- 视频窗口、音频窗口、视频浮窗、音频浮窗、短视频窗口、短视频浮窗、音频控制台等多种场景播放，需要灵活切换，这个也是一个大的难点
 
 
 
 ### 03.该播放器框架特点
-- 一定要解耦合
-    - 播放器内核与播放器解耦: 支持更多的播放场景、以及新的播放业务快速接入，并且不影响其他播放业务，比如后期添加阿里云播放器内核，或者腾讯播放器内核
-    - 播放器player与视频UI解耦：支持添加自定义视频视图，比如支持添加自定义广告，新手引导，或者视频播放异常等视图，这个需要较强的拓展性
-- 适合多种业务场景
-    - 比如适合播放单个视频，多个视频，以及列表视频，或者类似抖音那种一个页面一个视频，还有小窗口播放视频。也就是适合大多数业务场景
+#### 3.1 一定要解耦合
+- 播放器内核与播放器解耦: 支持更多的播放场景、以及新的播放业务快速接入，并且不影响其他播放业务，比如后期添加阿里云播放器内核，或者腾讯播放器内核
+- 播放器player与视频UI解耦：支持添加自定义视频视图，比如支持添加自定义广告，新手引导，或者视频播放异常等视图，这个需要较强的拓展性
+
+
+#### 3.2 适合多种业务场景
+- 比如适合播放单个视频，多个视频，以及列表视频，或者类似抖音那种一个页面一个视频，还有小窗口播放视频。也就是适合大多数业务场景
+
+
+#### 3.3 整体架构特点
 - 播放器的整体层级图
     - ![image](https://img-blog.csdnimg.cn/20201012215233584.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L20wXzM3NzAwMjc1,size_16,color_FFFFFF,t_70#pic_center)
 - 播放器架构的介绍
