--- a/Read/ReadVideoWiki/00.方案实践/04.视频边播边缓存分析.md
+++ b/Read/ReadVideoWiki/00.方案实践/04.视频边播边缓存分析.md
@@ -1,31 +1,46 @@
-# 12.视频边播边缓存分析
+# 视频边播边缓存分析
 #### 目录介绍
-- 01.前沿场景介绍一下
+- 01.整体概述
+    - 1.1 项目背景
+    - 1.2 遇到问题
+    - 1.3 基础概念介绍
+    - 1.4 设计目标
+    - 1.5 产生收益分析
 - 02.致敬优秀开源项目
-- 03.边播边缓存原理
-- 04.如何实现预加载
-- 06.缓存满了怎么处理
-- 14.视频缓冲后拖动问题
+    - 2.1 项目简单介绍
+    - 2.2 项目如何使用
+    - 2.3 项目缓存原理
+    - 2.4 整体设计思路
+- 03.原理流程分析
+    - 3.1 一些核心类分析
+- 03.如何实现预加载
 
 
 
 
-### 01.前沿场景介绍一下
-- 一些知名的视频app客户端（优酷，爱奇艺）播放视频的时候都有一些缓存进度(二级进度缓存)，微信有关的小视频，还有一些短视频app，都有边播边缓的处理。
-- 还有就是当文件缓存完毕了再次播放的话就不再请求网络了直接播放本地文件了。既节省了流程又提高了加载速度。
+### 01.整体概述
+#### 1.1 项目背景
 
+
+#### 1.2 遇到问题
+- 边播边缓存
+    - 一些知名的视频app客户端（优酷，爱奇艺）播放视频的时候都有一些缓存进度(二级进度缓存)，微信有关的小视频，还有一些短视频app，都有边播边缓的处理。
+    - 还有就是当文件缓存完毕了再次播放的话就不再请求网络了直接播放本地文件了。既节省了流程又提高了加载速度。
 
 
 
 ### 02.致敬优秀开源项目
+#### 2.1 项目简单介绍
 - 网络上比较好的项目：https://github.com/danikula/AndroidVideoCache
     - 网络用的HttpURLConnection，文件缓存处理，文件最大限度策略，回调监听处理，断点续传,代理服务等。
 - 但是存在一些问题，比如如下所示
     - 文件的缓存超过限制后没有按照lru算法删除，
     - 处理返回给播放器的http响应头消息，响应头消息的获取处理改为head请求（需服务器支持）
     - 替换网络库为okHttp（因为大部分的项目都是以okHttp为网络请求库的），但是这个改动性比较大
+
+#### 2.2 项目如何使用
 - 然后看一下怎么使用，超级简单。传入视频url链接，返回一个代理链接，然后就可以呢
-    ```
+    ``` java
     HttpProxyCacheServer cacheServer = ProxyVideoCacheManager.getProxy(this);
     String proxyUrl = cacheServer.getProxyUrl(URL_AD);
     mVideoPlayer.setUrl(proxyUrl);
@@ -46,7 +61,7 @@
 
 
 
-### 03.边播边缓存原理
+#### 2.3 项目缓存原理
 - 大概的原理
     - 原始的方式是直接塞播放地址给播放器，它就可以直接播放。现在我们要在中间加一层本地代理，播放器播放的时候（获取数据）是通过我们的本地代理的地址来播放的，这样我们就可以很好的在中间层（本地代理层）做一些处理，比如：文件缓存，预缓存（秒开处理），监控等。
 - 原理详细一点来说
@@ -54,6 +69,21 @@
     - 2.本地代理采用ServerSocket监听127.0.0.1的有效端口，这个时候手机就是一个服务器了，客户端就是socket，也就是播放器。
     - 3.读取客户端就是socket来读取数据（http协议请求）解析http协议。
     - 4.根据url检查视频文件是否存在，读取文件数据给播放器，也就是往socket里写入数据（socket通信）。同时如果没有下载完成会进行断点下载,当然弱网的话数据需要生产消费同步处理。
+
+
+#### 2.4 整体设计思路
+- 先说下它的整个设计思路，大体可以理解成两部分，这也是我看完后自己的理解：
+    - 1、开启一个线程池去给定的路径下下载文件，将下载的文件保存到本地；
+    - 2、视频播放的时候读保存到本地的文件，如果播放的地方还没保存到本地，那就需要等待视频下载到这个地方才能播放；
+
+
+### 03.原理流程分析
+#### 3.1 一些核心类分析
+- 构建HttpProxyCacheServer提供给我们可以设置的可以分为三类：
+    - 1、设置缓存文件得名字，默认使用的是url的MD5码；
+    - 2、设置缓存文件的路径，默认在路径：Android/data/包名/cache；
+    - 3、设置缓存文件的大小，默认是512M；
+
 
 
 
@@ -82,6 +112,7 @@
 - https://blog.csdn.net/ta893115871/article/details/71429738
 - https://blog.csdn.net/weixin_34402090/article/details/91367108
 - https://blog.csdn.net/u010107153/article/details/107091077
+- https://blog.csdn.net/tangedegushi/article/details/80936571
 
 
 
