--- a/Read/ReadVideoWiki/01.原理知识/04.音频基础知识点介绍.md
+++ b/Read/ReadVideoWiki/01.原理知识/04.音频基础知识点介绍.md
@@ -81,7 +81,7 @@
 
 
 #### 3.3 音频开发相关的API
-- 音频采集：  MediaRecoder，AudioRecord
+- 音频采集：  MediaRecorder，AudioRecord
 - 音频播放：  SoundPool，MediaPlayer，AudioTrack 
 - 音频编解码： MediaCodec
 - NDK API：     OpenSL ES
