--- a/Read/ReadVideoWiki/01.原理知识/10.MediaPlayer详细介绍.md
+++ b/Read/ReadVideoWiki/01.原理知识/10.MediaPlayer详细介绍.md
@@ -28,11 +28,13 @@
 
 ### 1.关于此视频封装库介绍
 #### 1.1 MediaPlayer简单介绍
-- MediaPlayer类是Androd多媒体框架中的一个重要组件，通过该类，我们可以以最小的步骤来获取，解码和播放音视频。它支持三种不同的媒体来源：
+- MediaPlayer类是Android多媒体框架中的一个重要组件，通过该类，我们可以以最小的步骤来获取，解码和播放音视频。它支持三种不同的媒体来源：
     - 本地资源
     - 内部URI，比如你可以通过ContentResolver来获取
     - 外部URL(流)
-- 对于Android支持的媒体格式列表，可见：Supported Media Formats文档在播放网络上的视频流时，Android原生的MediaPlayer支持两种协议，HTTP和RTSP，这两种协议最大的不同是，RTSP协议支持实时流媒体的播放，而HTTP协议不支持。因为VideoView的底层实现是MediaPlayer，因此VideoView也支持以上两种协议。但是Android原生MediaPalyer支持的协议（不支持RTMP、MMS等）和封装格式实在太有限了，如果我们想播放那些它不支持的视频，这时候就需要第三方播放器了，很多第三方播放器的底层实现都是基于FFmpeg
+- 对于Android支持的媒体格式列表，可见：
+    - Supported Media Formats文档在播放网络上的视频流时，Android原生的MediaPlayer支持两种协议，HTTP和RTSP，这两种协议最大的不同是，RTSP协议支持实时流媒体的播放，而HTTP协议不支持。
+    - 因为VideoView的底层实现是MediaPlayer，因此VideoView也支持以上两种协议。但是Android原生MediaPaler支持的协议（不支持RTMP、MMS等）和封装格式实在太有限了，如果我们想播放那些它不支持的视频，这时候就需要第三方播放器了，很多第三方播放器的底层实现都是基于FFmpeg
 
 
 
@@ -177,55 +179,6 @@
 - 在Android总播放视频可以直接使用VideoView，VideoView是通过继承自SurfaceView来实现的。
     - SurfaceView的大概原理就是在现有View的位置上创建一个新的Window，内容的显示和渲染都在新的Window中。这使得SurfaceView的绘制和刷新可以在单独的线程中进行，从而大大提高效率。
     - 由于SurfaceView的内容没有显示在View中而是显示在新建的Window中， 使得SurfaceView的显示不受View的属性控制，不能进行平移，缩放等变换，也不能放在其它RecyclerView或ScrollView中，一些View中的特性也无法使用。
-
-
-
-### 6.VideoView播放视频
-#### 6.1 VideoView介绍
-- 使用VideoView时，视频宽度等于VideoView布局宽，但是高是自适应的，自动调整宽高比到视频原始比例，所以不会有拉伸。
-
-#### 6.2 使用方法代码
-- 如下所示
-    ```
-    @Override
-    protected void onCreate(Bundle savedInstanceState) {
-        super.onCreate(savedInstanceState);
-        setContentView(R.layout.activity_main);
-        button = (Button) findViewById(R.id.play);
-        videoview = (VideoView) findViewById(R.id.video);
-    
-        mMediaController = new MediaController(this);
-        videoview.setMediaController(mMediaController);
-    
-        button.setOnClickListener(new View.OnClickListener(){
-            @Override
-            public void onClick(View v) {
-                loadView(url.getText().toString());
-            }
-        });
-    }
-    
-    
-    public void loadView(String path) {
-        Uri uri = Uri.parse(path);
-        videoview.setVideoURI(uri);
-        videoview.start();
-        videoview.setOnPreparedListener(new MediaPlayer.OnPreparedListener() {
-            @Override
-            public void onPrepared(MediaPlayer mp) {
-     //         mp.setLooping(true);
-                mp.start();// 播放
-                Toast.makeText(MainActivity.this, "开始播放！", Toast.LENGTH_LONG).show();
-            }
-        });
-        videoview.setOnCompletionListener(new MediaPlayer.OnCompletionListener() {
-            @Override
-            public void onCompletion(MediaPlayer mp) {
-                Toast.makeText(MainActivity.this, "播放完毕", Toast.LENGTH_SHORT).show();
-            }
-        });
-    }
-    ```
 
 
 ### 7.MediaPlayer+TextureView
