--- a/Read/ReadVideoWiki/01.原理知识/11.SurfaceView深入学习.md
+++ b/Read/ReadVideoWiki/01.原理知识/11.SurfaceView深入学习.md
@@ -16,7 +16,8 @@
 
 
 ### 01.SurfaceView有何特点
-- Android中 View是通过刷新来重绘视图，系统通过发出VSYNC信号来进行屏幕的重绘，刷新的时间间隔是16ms,如果我们可以在16ms以内将绘制工作完成，则没有任何问题，如果我们绘制过程逻辑很复杂，并且我们的界面更新还非常频繁，这时候就会造成界面的卡顿，影响用户体验，为此Android提供了SurfaceView来解决这一问题.
+- Android中 View是通过刷新来重绘视图
+    - 系统通过发出VSYNC信号来进行屏幕的重绘，刷新的时间间隔是16ms，如果我们可以在16ms以内将绘制工作完成，则没有任何问题，如果我们绘制过程逻辑很复杂，并且我们的界面更新还非常频繁，这时候就会造成界面的卡顿，影响用户体验，为此Android提供了SurfaceView来解决这一问题.
 - SurfaceView 继承自View，是 Android 中一种比较特殊的视图（View）
     - 它跟普通View最大的区别是它有自己的Surface，在WMS中有对应的WindowState，在SurfaceFlinger中有Layer
     - 一般的Activity包含的多个View会组成View hierachy的树形结构，只有最顶层的DecorView，也就是根结点视图，才是对WMS可见的。这个DecorView在WMS中有一个对应的WindowState。相应地，在SF中对应的Layer。
