--- a/Read/ReadVideoWiki/03.优化实践/02.视频深度优化处理.md
+++ b/Read/ReadVideoWiki/03.优化实践/02.视频深度优化处理.md
@@ -44,7 +44,7 @@
 
 ### 03.视频监控手段
 - 1、网络加载监控
-    - 播放视频首要的是网络加载，网络请求是一个复杂的过程，全链路的点太多，将全链路的所有点收集起来，可以在播放器中加上网络的全链路监控：
+    - 播放视频首要的是网络加载，网络请求是一个复杂的过程，全链路的点太多，将全链路的所有点收集起来，可以在播放器中加上网络的全链路监控，
     - 这样我们对网络的整体加载情况有了全面的把握，发生网络加载问题，也知道是哪个点出现了问题，分析解决问题有了更加全的数据。
 - 2、播放器全链路监控
     - 播放器的工作状态也可以拆解一下：播放器发生状态异常，开发者可以明确获知播放器当前所处的状态。
