mvp案例职责学习

--- a/Read/ReadLeetcode/01.精品专栏/01.算法基础导论介绍.md
+++ b/Read/ReadLeetcode/01.精品专栏/01.算法基础导论介绍.md
@@ -1,4 +1,10 @@
 #### 目录介绍
+- 01.数学中Log对数
+    - 1.1 什么是对数
+    - 1.2 对数符号
+    - 1.3 对数的定义
+    - 1.4 对数实际应用
+    - 1.5 表达方式
 - 01.为何要复杂度分析
 - 02.大O复杂度表示法
     - 2.1 先分析两个案例
@@ -8,6 +14,40 @@
     - 4.1 什么是空间复杂度
     - 4.2 看一个案例分析
     - 4.3 空间复杂度小结
+
+
+### 01.数学中Log对数
+#### 1.1 什么是对数
+- 在数学中，对数是对求幂的逆运算，正如除法是乘法的倒数，反之亦然。这意味着一个数字的对数是必须产生另一个固定数字（基数）的指数。在简单的情况下，乘数中的对数计数因子。更一般来说，乘幂允许将任何正实数提高到任何实际功率，总是产生正的结果，因此可以对于b不等于1的任何两个正实数b和x计算对数。
+- 如果a的x次方等于N（a>0，且a不等于1），那么数x叫做以a为底N的对数（logarithm），记作x=logaN。其中，a叫做对数的底数，N叫做真数。
+
+
+#### 1.2 对数符号
+- 以a为底N的对数记作。对数符号log出自拉丁文logarithm。为了使用方便，人们逐渐把以10为底的常用对数及以无理数e为底的自然对数分别记作lgN和lnN。
+
+
+#### 1.3 对数的定义
+- 如果ax =N（a>0，且a≠1），那么数x叫做以a为底N的对数，记作x=logaN，读作以a为底N的对数，其中a叫做对数的底数，N叫做真数。
+- 一般地，函数y=logaX（a>0，且a≠1）叫做对数函数，也就是说以幂（真数）为自变量，指数为因变量，底数为常量的函数，叫对数函数。
+- 其中x是自变量，函数的定义域是（0，+∞），即x>0。它实际上就是指数函数的反函数，可表示为x=ay。因此指数函数里对于a的规定，同样适用于对数函数。
+
+
+#### 1.4 对数实际应用
+- 在实数域中，真数式子没根号那就只要求真数式大于零，如果有根号，要求真数大于零还要保证根号里的式子大于等于零（若为负数，则值为虚数），底数则要大于0且不为1。
+- 对数函数的底数为什么要大于0且不为1？【在一个普通对数式里 a<0，或=1 的时候是会有相应b的值。但是，根据对数定义：log以a为底a的对数；如果a=1或=0那么log以a为底a的对数就可以等于一切实数（比如log11也可以等于2，3，4，5，等等）】
+- 通常我们将以10为底的对数叫常用对数（common logarithm），并把log10N记为lgN。另外，在科学计数中常使用以无理数e=2.71828···为底数的对数，以e为底的对数称为自然对数（natural logarithm），并且把logeN 记为In N。
+- 根据对数的定义，可以得到对数与指数间的关系：
+    - 当a>0，a≠1时，aX=N <--> X=logaN。（N>0）
+    - 由指数函数与对数函数的这个关系，可以得到关于对数的如下结论：
+    - 在实数范围内，负数和零没有对数；
+    - loga1，log以a为底1的对数为0（a为常数） 恒过点（1，0）。
+
+
+
+#### 1.5 表达方式
+- （1）常用对数：lg（b）=log10b（10为底数）。
+- （2）自然对数：ln（b）=logeb（e为底数）。
+- e为无限不循环小数，通常情况下只取e=2.71828。
 
 
 
