--- a/Read/ReadMeWiki/01.大型方案/42.ServiceLoader实践.md
+++ b/Read/ReadMeWiki/01.大型方案/42.ServiceLoader实践.md
@@ -107,3 +107,5 @@ SPI原理图
 
 ### 参考
 - 开发插件并发布到JitPack：https://www.jianshu.com/p/c78263dc3b7a
+- JavaSPI机制学习笔记：https://www.cnblogs.com/lovesqcc/p/5229353.html
+- 高级开发必须理解的Java中SPI机制：https://www.jianshu.com/p/46b42f7f593c
