--- a/Read/ReadMeWiki/01.大型方案/05.Task统计耗时实践.md
+++ b/Read/ReadMeWiki/01.大型方案/05.Task统计耗时实践.md
@@ -21,7 +21,6 @@
     - 落实反馈
 
 
-
 ### 01.概述
 #### 1.1 项目背景
 - 通过简要的语言描述项目背景以及要达成的业务目标。
@@ -129,9 +128,7 @@
 - 需要列出方案设计过程的文档，包括但不局限于PM需求文档，技术参考文档等。
 
 
-
-### 参考
-- https://github.com/yangchong211/YCImageGallery
-- https://github.com/SherlockGougou/BigImageViewPager
+- Gradle学习(八) 统计Task执行时长
+    - https://blog.csdn.net/chennai1101/article/details/103280523/
 
 
