--- a/Read/ReadMeWiki/00.方案实践/21.App稳定性专项实践.md
+++ b/Read/ReadMeWiki/00.方案实践/21.App稳定性专项实践.md
@@ -1,11 +1,13 @@
 #### 目录介绍
 - 01.稳定性背景说明
     - 1.1 项目背景
-    - 1.2 遇到问题
-    - 1.3 基础概念
-    - 1.4 设计目标
+    - 1.2 什么是稳定性
+    - 1.3 衡量标准
+    - 1.4 建设目标
 - 02.稳定性现状介绍
-    - 2.1 兼容性测试说明
+    - 2.1 影响稳定性因素
+    - 2.2 兼容性测试说明
+    - 2.3 稳定性总流程
 - 03.稳定性目标方向
     - 3.1 代码稳定性目标
     - 3.2 业务稳定性目标
@@ -28,16 +30,59 @@
 ### 01.稳定性背景说明
 #### 1.1 项目背景
 - 随着团队和业务快速增长，用户量的提升，各种各样的问题频繁报漏，线上问题多次发生，耗资源、失用户，稳定性的要求也越来越高，我们必须思考改如何从稳定性的角度来保证我们的质量。
+- 稳定的软件系统是研发工作的职能和责任。但另一方面，业务的复杂度提升和用户设备的差异性也给客户端的稳定性和代码的可维护性带来了很大的挑战。客户端的稳定性建设工作在业务发展的过程中越来越受到重视。
+  
+
+#### 1.2 什么是稳定性
+- 这里引用一句对系统稳定性的定义：
+    - 系统稳定性指系统要素在外界影响下表现出的某种稳定状态。
+- 对于客户端来说，从 App 的使用者和开发者这两个角度来说，稳定性的含义有所不同：
+    - 对于用户，稳定性意味着：使用 App 的过程中不崩不卡，能正常提供用户所需的服务，出现异常情况时引导合理，提示友好。
+    - 对于开发者，稳定性意味着：线上整体性能指标达标，核心业务链路稳定不出错，非核心业务异常时有出口、可降级。
+- 所以结合上面两者的关注点汇总来说，客户端稳定性可定义为以下两个方面：
+    - 性能稳定性
+    - 业务链路稳定性
 
 
-#### 1.4 设计目标
+#### 1.3 衡量标准
+- 有个定义之后，就需要来考虑如何衡量的问题了。衡量系统稳定性从可量化的角度来说，当然离不开稳定性指标。
+- 客户端的稳定性衡量，从目前已有的性能稳定性指标来说的话，一般从问题的影响面和问题的严重程度这两方面来衡量。
+
+
+##### 1.3.1 性能稳定性
+- 以最常见的客户端 Crash 率指标为例：
+    - 影响用户占比 Crash 率（影响用户数 / 使用用户数）是从 Crash 的影响面来衡量。
+    - PV 维度的 Crash 率（Crash 次数 / 使用用户数）是从 Crash 的严重程度来衡量。
+- 例如 Crash 率在千分位的占比算是合格的，万分位的占比一般认为是良好。如果是百分位表示需要改进。
+
+
+##### 1.3.2 业务链路稳定性
+- 对于业务链路稳定性来说，目前有一些业务通过监控的方式来做稳定性建设，其中包括
+    - 对基础服务的监控，例如业务依赖的音视频调用的 PV / UV 以及对应维度的失败率等
+    - 对业务链路的监控，例如核心业务链路相关的调用、 API 请求的 PV / UV 以及对应维度的失败率，异常率等
+
+
+
+
+#### 1.4 建设目标
 - 基础指标：
-- 质量保障工具落地客户端，降低问题发生概率，减少线上问题
-- 建设稳定性相关工具，提高测试效率
+    - 质量保障工具落地客户端，降低问题发生概率，减少线上问题
+    - 建设稳定性相关工具，提高测试效率
+- 在稳定性建设中，以【故障发生时】为参考点
+    - 一般把处理阶段分为【事前】（故障发生前）、【事中】（故障发生时）和【事后】（故障发生后）这三个阶段。
+    - 针对这三个阶段我们可以分【预防】、【发生】、【解决】和【总结】四个方面来建设，每个方面都有各自的职能和侧重点，但也相互关联相互依赖。
+
+
+### 02.稳定性现状介绍
+#### 2.1 影响稳定性因素
+- 人为因素
+    - 通常人为因素都是可以在事前避免的，因为它是可控的。人为因素的故障发生后一般都需要修复后重新上线才能止损。例如典型的人为因素有代码编写错误、配置错误、系统设计不兼容等等。
+- 自然因素
+    - 自然因素通常属于概率事件，受客观因素影响，不受控，无法避免。例如环境因素（网络环境、地理位置等）和外部依赖因素（第三方故障）等等。
 
 
 
-#### 2.1 兼容性测试说明
+#### 2.2 兼容性测试说明
 - 不同厂商的ROM与各种机型是否兼容
     - UI展示是否完整，是否重叠
     - 不同机型对第三方库的兼容性
@@ -71,8 +116,7 @@
     - 自动化测试主要是利用脚本对被测应用的安装卸载，稳定性，功能等的测试。
 
 
-
-#### 4.3 方案流程
+#### 2.3 稳定性总流程
 - 事前
     - 方案评审，代码Review，技术串讲，准入自测，灰度流程
 - 事中
