--- a/Read/ReadMeWiki/01.大型方案/12.屏幕适配优化实践.md
+++ b/Read/ReadMeWiki/01.大型方案/12.屏幕适配优化实践.md
@@ -1,31 +1,104 @@
 #### 目录介绍
-- 1.屏幕适配定义
-- 2.相关重要的概念
-	* 2.1 屏幕尺寸[**物理尺寸**]
-	* 2.2 屏幕分辨率[**px**]
-	* 2.3 屏幕像素密度[**dpi**]
-	* 2.4 dp、dip、dpi、sp、px
-	* 2.5 mdpi、hdpi、xdpi、xxdpi
-	* 2.6 获取屏幕分辨率[宽高]
-- 3.Android屏幕适配出现的原因
-	* 3.1 什么是像素点
-	* 3.2 dp与百分比
-- 4.Android适配问题及本质
-	* 4.1 尺寸适配
-	* 4.2 代码适配
-	* 4.3 布局适配
-	* 4.4 权重适配
-	* 4.5 图片适配
-	* 4.6 百分比适配
-- 5.存在问题和困境
-    * 5.1 通配符适配困境
-    * 5.2 传统dp适配困境
-- 6.常用解决方案
-    * 6.1 今日头条适配方案
-    * 6.2 限制符适配方案
-- 7.第三方开源库
-    * 7.1 鸿洋大神库
-    * 7.2 AndroidAutoSize
+- 01.整体概述
+    - 1.1 项目背景
+    - 1.2 基础概念
+    - 1.3 设计目标
+    - 1.4 收益分析
+- 03.技术方案选型
+    - 3.1 适配方案说明
+    - 3.2 适配方案对比
+
+
+
+### 01.整体概述
+#### 1.1 项目背景
+- 碎片化，由于Android系统的开放性，任何设备厂商都可以对Android进行定制，于是导致Android开发碎片化严重的现象，碎片化主要有三方面：
+    - 屏幕尺寸碎片化：5寸、5.5寸、6寸等等 
+    - 屏幕分辨率碎片化：320x480、480x800、720x1280、1080x1920等等
+    - 系统版本碎片化
+- 组件库规范化
+    - 本次我们开展组件库专项的其中一个目的也是为了统一各端的UI规范，保障各种组件在不同端上显示的一致性。所以我们希望在所有的控件包括业务组件开发完成并提供给业务方使用之后，这些存在于组件库的组件都能以一个标准的一致的样子展现在各端。
+
+
+#### 1.2 基础概念
+
+
+#### 1.3 设计目标
+- 屏幕适配工作主要有几个核心要素：
+    - 还原度
+    - 适配效率
+    - 稳定性
+- 基于上述几点本次屏幕适配方案希望达到的目标：
+    - 对UI设计稿有高的还原度
+    - 将设计稿向代码转换时的高效性，所见即所得
+    - 方案实现成本可控，且后续投入维护的工作越少越好
+    - 不会对集成方已有组件或界面产生影响
+
+
+#### 1.4 收益分析
+
+
+### 03.技术方案选型
+#### 3.1 适配方案说明
+- dp适配
+    - Android最原始的适配方案，根据屏幕密度进行px和dp之间的换算	
+- 宽度限定符
+    - 官方方案，穷举法，列出所有要适配的Android设备的宽高像素值	
+- 动态修改密度
+    - 民间方案，根据屏幕尺寸动态修改px和dp的转换比例	
+- SW
+    - 官方方案，采用最小宽度限定符进行适配
+- AutoLayout
+    - 民间方案，根据屏幕尺寸动态对view的尺寸进行缩放	
+
+
+
+#### 3.2 适配方案对比
+##### 3.2.1 dp适配
+- 优点：Android原生方案，适配简单，稳定性高，适用于对适配要求不高的项目	
+- 缺点：这不是一种等比例缩放的方案，无法稳定还原设计稿。目前市面上许多手机或者说几乎所有手机的宽高比都不太固定，这就导致同样是1080P的手机，最终的DPI都不一定相同，这就会造成同样的dp值，在不同的手机上的展示效果不同
+
+
+##### 3.2.2 宽度限定符
+- 优点
+    - 等比缩放方案，官方支持稳定性高，出现问题概率极低。只要适配上对应的宽高，可稳定还原设计稿
+    - 适配范围可控，可对局部进行适配，不会一刀切而影响到第三方库或者已有项目的其他组件
+- 缺点
+    - 适配要求高，需精准命中宽高才能适配上，否则会直接选择默认尺寸，出现展示问题，兜底差，容错差
+    - 成本高，想覆盖市面上大多数机型，那么就需要穷举所有机型的宽高并创建对应的尺寸资源，数量不可控，额外增加包体积
+
+
+##### 3.2.3 动态修改密度
+- 优点
+    - 等比缩放方案，可稳定还原设计稿
+    - 代码入侵低，对xml文件无入侵，之后如果切换方案的成本很低
+- 缺点
+    - 对设计稿基准要求高，一旦组件所在设计稿基准与代码中的不一致，就会导致显示的不准确，特别是一些第三方库的设计稿基准不可控
+    - 风险高，适配范围不可控，一刀切的适配，强行让所有控件甚至包括第三方库的控件在我们定义的基准下展示，会出现问题
+    - 接入成本高，同样是一刀切的问题，对已有项目已有组件不友好，想要避免已有控件展示的正确性，需要将所有设计稿按照新的基准去重新设计一遍，代码中的尺寸也需要大面积进行修改
+
+
+##### 3.2.4 SW
+- 优点
+    - 等比缩放方案，官方支持稳定性高，极限问题概率极低。可稳定还原设计稿
+      有很好的降级机制，没有命中对应资源集时，会自动寻找最接近的资源
+      设计稿尺寸无缝对接，所见即所得
+      适配范围可控，可对局部进行适配，不会一刀切而影响到第三方库或者已有项目的其他组件
+- 缺点
+    - 与宽高限定符类似，需要列举一些占比较高的屏幕，会增加一些包体积
+      并不是全版本支持，3.2之后开始出现（这个不是什么问题，目前基本没有4.0之前的项目了）
+      无法完美覆盖所有机型，只能适配在某个范围内的机型，范围大小依赖项目添加的适配种类
+
+
+##### 3.2.5 AutoLayout
+- 优点
+    - 稳定还原设计稿。一劳永逸，不需要针对不同的屏幕尺寸做单独适配
+- 缺点
+    - 有性能损耗，因为会在view测量时做尺寸的变换
+      一些特定的自定义view需要做单独适配
+      风险高，适配范围不可控，目前CBD项目为单activity，该方案会一次性将activity下所有page的view全部进行尺寸替换
+      稳定性差，整体适配是在一个个人研发的框架下进行的，并不是系统完成的，一旦框架出问题对整个项目的影响非常大
+      维护成本高，目前该项目已经停止维护，后续维护升级成本都需要自己来做，维护组件库的同时还需要同时去维护一个适配库，增加额外负担
 
 
 
