组件化分层学习

--- a/md/03.组件化框架.md
+++ b/md/03.组件化框架.md
@@ -64,6 +64,8 @@
 - 组件化模式下如何通信
     - 这是组件化工程模型下的业务关系，业务之间将不再直接引用和依赖，而是通过“路由”这样一个中转站间接产生联系。在这个开源项目中，我使用的阿里开源的路由框架。关于Arouter基础使用和代码分析，可以看我这篇博客：[Arouter使用与代码解析](https://github.com/yangchong211/YCBlogs)
     - ![image](https://upload-images.jianshu.io/upload_images/4432347-b68c6a71b703765a.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+#### 4.2 组件化分层
 - 组件化开发中的组件分层的划分：
     - **App工程**：app壳
     - **业务层组件**：豆瓣组件，gank组件，视频播放组件，，音乐组件，记事本组件，web组件，游戏组件，BusinessInterface接口等等
