--- a/Read/ReadFlutterWiki/02.基础知识/02.Flutter生命周期.md
+++ b/Read/ReadFlutterWiki/02.基础知识/02.Flutter生命周期.md
@@ -207,7 +207,7 @@
 
 
 ### 07.前后台监听注意点
-- 在应用中有时候会需要判断程序的前后台状态,这里主要使用WidgetsBindingObserver进行判断。对于前后台判断的情况也只是WidgetsBindingObserver中的一种功能。对于WidgetsBindingObserver需要注意两点:
+- 在应用中有时候会需要判断程序的前后台状态，这里主要使用WidgetsBindingObserver进行判断。对于前后台判断的情况也只是WidgetsBindingObserver中的一种功能。对于WidgetsBindingObserver需要注意两点:
     - 最好是最先进入而且不会销毁的页面，这样可以判断整个程序的前后台状态
     - WidgetsBindingObserver要写在被MaterialApp或者其它主题包裹的地方
 - 遇到问题说明一下
