--- a/Read/ReadFlutterWiki/03.原理分析/07.Flutter运行机制.md
+++ b/Read/ReadFlutterWiki/03.原理分析/07.Flutter运行机制.md
@@ -123,16 +123,16 @@
       return element;
     }
     ```
-- 该方法负责创建根element，即` RenderObjectToWidgetElement`，并且将element与widget 进行关联，即创建出 widget树对应的element树。如果element 已经创建过了，则将根element 中关联的widget 设为新的，由此可以看出element 只会创建一次，后面会进行复用。那么`BuildOwner`是什么呢？其实他就是widget framework的管理类，它跟踪哪些widget需要重新构建。
+- 该方法负责创建根element，即` RenderObjectToWidgetElement`，并且将element与widget 进行关联，即创建出 widget树对应的element树。
+    - 如果element 已经创建过了，则将根element 中关联的widget 设为新的，由此可以看出element 只会创建一次，后面会进行复用。那么`BuildOwner`是什么呢？其实他就是widget framework的管理类，它跟踪哪些widget需要重新构建。
 
 
 
 ### 02.页面渲染
 - 回到`runApp`的实现中，当调用完`attachRootWidget`后，最后一行会调用 `WidgetsFlutterBinding` 实例的 `scheduleWarmUpFrame()` 方法，该方法的实现在`SchedulerBinding` 中，它被调用后会立即进行一次绘制（而不是等待"vsync"信号），在此次绘制结束前，该方法会锁定事件分发，也就是说在本次绘制结束完成之前Flutter将不会响应各种事件，这可以保证在绘制过程中不会再触发新的重绘。
 - 下面是`scheduleWarmUpFrame()` 方法的部分实现(省略了无关代码)：
-    ```dart
+    ``` dart
     void scheduleWarmUpFrame() {
-      ...
       Timer.run(() {
         handleBeginFrame(null); 
       });
@@ -257,6 +257,7 @@
     ```
     - 该方法进行了最终的绘制，可以看出它不是重绘了所有 `RenderObject`，而是只重绘了需要重绘的 `RenderObject`。真正的绘制是通过`PaintingContext.repaintCompositedChild()`来绘制的，该方法最终会调用Flutter engine提供的Canvas API来完成绘制。
 
+
 #### 3.4 compositeFrame()
 - 代码如下所示
     ```dart
@@ -274,7 +275,8 @@
       }
     }
     ```
-- 这个方法中有一个`Scene`对象，Scene对象是一个数据结构，保存最终渲染后的像素信息。这个方法将Canvas画好的`Scene`传给`window.render()`方法，该方法会直接将scene信息发送给Flutter engine，最终由engine将图像画在设备屏幕上。
+- 这个方法中有一个`Scene`对象，Scene对象是一个数据结构，保存最终渲染后的像素信息。
+    - 这个方法将Canvas画好的`Scene`传给`window.render()`方法，该方法会直接将scene信息发送给Flutter engine，最终由engine将图像画在设备屏幕上。
 
 
 #### 最后
