--- a/Read/ReadFlutterWiki/04.混合开发/00.Flutter基础使用.md
+++ b/Read/ReadFlutterWiki/04.混合开发/00.Flutter基础使用.md
@@ -51,6 +51,12 @@
     - 怎么跨平台？
     - 如何高性能？
 - 开发者可以通过 Dart语言开发 App，一套代码同时运行在 iOS 和 Android平台。 
+- 使用 Dart 作为 Flutter 的开发语言，我想还有其他更有说服力的理由：
+    - Dart 同时支持即时编译 JIT 和事前编译 AOT。在开发期使用 JIT，开发周期异常短，调试方式颠覆常规（支持有状态的热重载）；而发布期使用 AOT，本地代码的执行更高效，代码性能和用户体验也更卓越。
+    - Dart 作为一门现代化语言，集百家之长，拥有其他优秀编程语言的诸多特性（比如，完善的包管理机制）。也正是这个原因，Dart 的学习成本并不高，很容易上手。
+    - **Dart 避免了抢占式调度和共享内存，可以在没有锁的情况下进行对象分配和垃圾回收，在性能方面表现相当不错**。
+
+
 
 
 #### 3.1 跨平台自绘引擎
