--- a/Read/ReadVideoWiki/00.方案实践/01.视频播放器封装思路.md
+++ b/Read/ReadVideoWiki/00.方案实践/01.视频播放器封装思路.md
@@ -363,6 +363,9 @@
     - https://github.com/CarGuo/GSYVideoPlayer
 - 饺子播放器
     - https://github.com/lipangit/JiaoZiVideoPlayer
+- 音视频学习
+    - https://github.com/githubhaohao/LearnFFmpeg
+
 
 
 ### 项目地址：https://github.com/yangchong211/YCVideoPlayer
