--- a/Read/ReadMeWiki/10.其他重要/02.Android编译问题.md
+++ b/Read/ReadMeWiki/10.其他重要/02.Android编译问题.md
@@ -16,7 +16,7 @@ https://github.com/leavesCZY/AndroidGuide
 - 打包命令行
     ```
     ./gradlew assembleGlobalDebug  打Global包
-    
+    ./gradlew assembleDebug --stacktrace    查看详细日志
     ./gradlew -v 版本号，首次运行，没有gradle的要下载的哦。
     ./gradlew clean 删除项目LoveYouDeeply/app目录下的build文件夹
     ./gradlew build 检查依赖并编译打包，这里注意的是 ./gradlew build 命令把debug、release环境的包都打出来，生成的包在目录LoveYouDeeply/app/build/outputs/apk/下。如果正式发布只需要打release的包，该怎么办呢，下面介绍一个很有用的命令 assemble, 如下面要介绍的一些命令。
